--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body {
     margin: 0;
     font-family: 'Poppins', sans-serif;
-    margin-top: 20px; /* This margin just makes the text easier to read. You can remove it if you want since it can mess with your other styles. */
+    margin-top: 10px; 
   }
   
  
@@ -689,9 +689,9 @@ left:20px;
     margin:80px;
 }
 body::before {
-    content: "XS";
-    color: red;
-    font-size: 1rem;
+    
+    color: rgb(119, 0, 255);
+    font-size: 5;
     font-weight: bold;
     position: fixed;
     top: 0;
